--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.13.8",
     "react-table": "^7.8.0",
     "styled-components": "^5.3.9"
   },
