--- a/package.json
+++ b/package.json
@@ -27,5 +27,7 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "vite": "^4.2.0"
-  }
+  },"resolutions": {
+    "eslint-loader": "3.0.2"
+}
 }
