--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
-    "react-table": "^7.8.0",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
@@ -27,7 +26,8 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "vite": "^4.2.0"
-  },"resolutions": {
+  },
+  "resolutions": {
     "eslint-loader": "3.0.2"
-}
+  }
 }
