--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+     "deploy": "yarn build && netlify deploy --prod"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
