--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-     "deploy": "yarn build && netlify deploy --prod"
+    "deploy": "yarn build && netlify deploy --prod"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -17,6 +17,7 @@
     "@mui/styled-engine-sc": "^5.11.11",
     "axios": "^1.3.4",
     "babel-plugin-styled-components": "^2.0.7",
+    "framer-motion": "^10.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
