--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "yarn build && netlify deploy --prod"
+    "deploy": "vite build && netlify deploy --prod"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
